objects/Manual_Project_Tasks__mdt.object
<CustomObject>
    <description>Project tasks that are created manually via a requirement Metadata are stored here.</description>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Tasks__c</fullName>
        <label>Project Task Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <label>Requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Manual Project Task</label>
    <listViews>
        <fullName>All_columns_view</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Code__c</columns>
        <columns>Project_Tasks__c</columns>
        <columns>Requirement_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All columns view</label>
    </listViews>
    <pluralLabel>Manual Project Tasks</pluralLabel>
</CustomObject>